Made header relative position to fix overlap issue

--- a/httpdocs/assets/sass/_header.scss
+++ b/httpdocs/assets/sass/_header.scss
@@ -1,6 +1,7 @@
 header{
   background-color: $white;
   z-index: 200;
+  position:relative;
 }
 
 .header-nav-container{
